<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/music_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/download"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#9c0000"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:text="@string/tyler_a_boy_is_a_gun"/>

            <LinearLayout
                android:id="@+id/btn_container"
                android:gravity="bottom"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/play_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/play"
                    android:layout_marginEnd="10dp"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <Button
                    android:id="@+id/pause_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/pause"
                    android:layout_marginEnd="10dp"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <Button
                    android:id="@+id/stop_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
