<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <TextView
            android:id="@+id/date"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/mon"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_weight="2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:src="@drawable/weather_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/partly_cloudy_n24c_31c"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingStart="20dp" />
    </LinearLayout>

